LOO1_Git6/ParLI.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from ParLI.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pClassDeclaration -> ClassDeclaration       (1)
	%start_pMemberDeclaration -> MemberDeclaration     (2)
	%start_pDecl -> Decl                               (3)
	%start_pListStm -> ListStm                         (4)
	%start_pListClassDeclaration -> ListClassDeclaration   (5)
	%start_pListMemberDeclaration -> ListMemberDeclaration   (6)
	%start_pListDecl -> ListDecl                       (7)
	%start_pListExp -> ListExp                         (8)
	%start_pStm -> Stm                                 (9)
	%start_pExp1 -> Exp1                               (10)
	%start_pExp2 -> Exp2                               (11)
	%start_pExp3 -> Exp3                               (12)
	%start_pExp4 -> Exp4                               (13)
	%start_pExp5 -> Exp5                               (14)
	%start_pExp6 -> Exp6                               (15)
	%start_pExp7 -> Exp7                               (16)
	%start_pExp8 -> Exp8                               (17)
	%start_pType -> Type                               (18)
	%start_pExp -> Exp                                 (19)
	Ident -> L_Ident                                   (20)
	Integer -> L_integ                                 (21)
	String -> L_quoted                                 (22)
	Program -> ListClassDeclaration                    (23)
	ClassDeclaration -> 'class' Ident '{' ListMemberDeclaration '}'   (24)
	MemberDeclaration -> Decl ';'                      (25)
	MemberDeclaration -> Type Ident '(' ListDecl ')' '{' ListStm '}'   (26)
	Decl -> Type Ident                                 (27)
	ListStm ->                                         (28)
	ListStm -> Stm ListStm                             (29)
	ListClassDeclaration ->                            (30)
	ListClassDeclaration -> ClassDeclaration ListClassDeclaration   (31)
	ListMemberDeclaration ->                           (32)
	ListMemberDeclaration -> MemberDeclaration ListMemberDeclaration   (33)
	ListDecl ->                                        (34)
	ListDecl -> Decl                                   (35)
	ListDecl -> Decl ',' ListDecl                      (36)
	ListExp ->                                         (37)
	ListExp -> Exp                                     (38)
	ListExp -> Exp ',' ListExp                         (39)
	Stm -> Decl ';'                                    (40)
	Stm -> Exp ';'                                     (41)
	Stm -> Ident '=' Exp ';'                           (42)
	Stm -> '{' ListStm '}'                             (43)
	Stm -> 'while' '(' Exp ')' Stm                     (44)
	Stm -> 'return' Exp ';'                            (45)
	Stm -> 'if' '(' Exp ')' 'then' Stm 'else' Stm      (46)
	Exp1 -> Exp1 '||' Exp2                             (47)
	Exp1 -> Exp2                                       (48)
	Exp2 -> Exp2 '&&' Exp3                             (49)
	Exp2 -> Exp3                                       (50)
	Exp3 -> '!' Exp3                                   (51)
	Exp3 -> Exp4                                       (52)
	Exp4 -> Exp4 '++' Exp5                             (53)
	Exp4 -> Exp4 '+' Exp5                              (54)
	Exp4 -> Exp4 '-' Exp5                              (55)
	Exp4 -> Exp5                                       (56)
	Exp5 -> Exp5 '*' Exp6                              (57)
	Exp5 -> Exp5 '/' Exp6                              (58)
	Exp5 -> Exp6                                       (59)
	Exp6 -> Ident '.' Ident '(' ListExp ')'            (60)
	Exp6 -> Exp7                                       (61)
	Exp7 -> 'new' Ident '()'                           (62)
	Exp7 -> Exp8                                       (63)
	Exp8 -> Integer                                    (64)
	Exp8 -> Ident                                      (65)
	Exp8 -> String                                     (66)
	Exp8 -> 'true'                                     (67)
	Exp8 -> 'false'                                    (68)
	Exp8 -> '(' Exp ')'                                (69)
	Type -> 'bool'                                     (70)
	Type -> 'int'                                      (71)
	Type -> 'void'                                     (72)
	Type -> 'String'                                   (73)
	Type -> Ident                                      (74)
	Exp -> Exp1                                        (75)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'&&'           { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	'()'           { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	'++'           { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'.'            { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	';'            { PT _ (TS _ 13) }
	'='            { PT _ (TS _ 14) }
	'String'       { PT _ (TS _ 15) }
	'bool'         { PT _ (TS _ 16) }
	'class'        { PT _ (TS _ 17) }
	'else'         { PT _ (TS _ 18) }
	'false'        { PT _ (TS _ 19) }
	'if'           { PT _ (TS _ 20) }
	'int'          { PT _ (TS _ 21) }
	'new'          { PT _ (TS _ 22) }
	'return'       { PT _ (TS _ 23) }
	'then'         { PT _ (TS _ 24) }
	'true'         { PT _ (TS _ 25) }
	'void'         { PT _ (TS _ 26) }
	'while'        { PT _ (TS _ 27) }
	'{'            { PT _ (TS _ 28) }
	'||'           { PT _ (TS _ 29) }
	'}'            { PT _ (TS _ 30) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pClassDeclaration rule  1
	%start_pMemberDeclaration rule  2
	%start_pDecl    rule  3
	%start_pListStm rule  4
	%start_pListClassDeclaration rule  5
	%start_pListMemberDeclaration rule  6
	%start_pListDecl rule  7
	%start_pListExp rule  8
	%start_pStm     rule  9
	%start_pExp1    rule  10
	%start_pExp2    rule  11
	%start_pExp3    rule  12
	%start_pExp4    rule  13
	%start_pExp5    rule  14
	%start_pExp6    rule  15
	%start_pExp7    rule  16
	%start_pExp8    rule  17
	%start_pType    rule  18
	%start_pExp     rule  19
	Ident           rule  20
	Integer         rule  21
	String          rule  22
	Program         rule  23
	ClassDeclaration rule  24
	MemberDeclaration rules 25, 26
	Decl            rule  27
	ListStm         rules 28, 29
	ListClassDeclaration rules 30, 31
	ListMemberDeclaration rules 32, 33
	ListDecl        rules 34, 35, 36
	ListExp         rules 37, 38, 39
	Stm             rules 40, 41, 42, 43, 44, 45, 46
	Exp1            rules 47, 48
	Exp2            rules 49, 50
	Exp3            rules 51, 52
	Exp4            rules 53, 54, 55, 56
	Exp5            rules 57, 58, 59
	Exp6            rules 60, 61
	Exp7            rules 62, 63
	Exp8            rules 64, 65, 66, 67, 68, 69
	Type            rules 70, 71, 72, 73, 74
	Exp             rule  75

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'class'        shift, and enter state 75
	%eof           reduce using rule 30

	Program        goto state 81
	ClassDeclarationgoto state 73
	ListClassDeclarationgoto state 82

State 1


	'class'        shift, and enter state 75

	ClassDeclarationgoto state 80

State 2


	'String'       shift, and enter state 43
	'bool'         shift, and enter state 44
	'int'          shift, and enter state 45
	'void'         shift, and enter state 46
	L_Ident        shift, and enter state 21

	Ident          goto state 41
	MemberDeclarationgoto state 79
	Decl           goto state 70
	Type           goto state 72

State 3


	'String'       shift, and enter state 43
	'bool'         shift, and enter state 44
	'int'          shift, and enter state 45
	'void'         shift, and enter state 46
	L_Ident        shift, and enter state 21

	Ident          goto state 41
	Decl           goto state 78
	Type           goto state 59

State 4


	'!'            shift, and enter state 34
	'('            shift, and enter state 35
	'String'       shift, and enter state 43
	'bool'         shift, and enter state 44
	'false'        shift, and enter state 36
	'if'           shift, and enter state 61
	'int'          shift, and enter state 45
	'new'          shift, and enter state 37
	'return'       shift, and enter state 62
	'true'         shift, and enter state 38
	'void'         shift, and enter state 46
	'while'        shift, and enter state 63
	'{'            shift, and enter state 64
	L_Ident        shift, and enter state 21
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40
	%eof           reduce using rule 28

	Ident          goto state 56
	Integer        goto state 23
	String         goto state 24
	Decl           goto state 57
	ListStm        goto state 76
	Stm            goto state 77
	Exp1           goto state 25
	Exp2           goto state 26
	Exp3           goto state 27
	Exp4           goto state 28
	Exp5           goto state 29
	Exp6           goto state 30
	Exp7           goto state 31
	Exp8           goto state 32
	Type           goto state 59
	Exp            goto state 60

State 5


	'class'        shift, and enter state 75
	%eof           reduce using rule 30

	ClassDeclarationgoto state 73
	ListClassDeclarationgoto state 74

State 6


	'String'       shift, and enter state 43
	'bool'         shift, and enter state 44
	'int'          shift, and enter state 45
	'void'         shift, and enter state 46
	L_Ident        shift, and enter state 21
	%eof           reduce using rule 32

	Ident          goto state 41
	MemberDeclarationgoto state 69
	Decl           goto state 70
	ListMemberDeclarationgoto state 71
	Type           goto state 72

State 7


	'String'       shift, and enter state 43
	'bool'         shift, and enter state 44
	'int'          shift, and enter state 45
	'void'         shift, and enter state 46
	L_Ident        shift, and enter state 21
	%eof           reduce using rule 34

	Ident          goto state 41
	Decl           goto state 67
	ListDecl       goto state 68
	Type           goto state 59

State 8


	'!'            shift, and enter state 34
	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'new'          shift, and enter state 37
	'true'         shift, and enter state 38
	L_Ident        shift, and enter state 21
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40
	%eof           reduce using rule 37

	Ident          goto state 22
	Integer        goto state 23
	String         goto state 24
	ListExp        goto state 65
	Exp1           goto state 25
	Exp2           goto state 26
	Exp3           goto state 27
	Exp4           goto state 28
	Exp5           goto state 29
	Exp6           goto state 30
	Exp7           goto state 31
	Exp8           goto state 32
	Exp            goto state 66

State 9


	'!'            shift, and enter state 34
	'('            shift, and enter state 35
	'String'       shift, and enter state 43
	'bool'         shift, and enter state 44
	'false'        shift, and enter state 36
	'if'           shift, and enter state 61
	'int'          shift, and enter state 45
	'new'          shift, and enter state 37
	'return'       shift, and enter state 62
	'true'         shift, and enter state 38
	'void'         shift, and enter state 46
	'while'        shift, and enter state 63
	'{'            shift, and enter state 64
	L_Ident        shift, and enter state 21
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40

	Ident          goto state 56
	Integer        goto state 23
	String         goto state 24
	Decl           goto state 57
	Stm            goto state 58
	Exp1           goto state 25
	Exp2           goto state 26
	Exp3           goto state 27
	Exp4           goto state 28
	Exp5           goto state 29
	Exp6           goto state 30
	Exp7           goto state 31
	Exp8           goto state 32
	Type           goto state 59
	Exp            goto state 60

State 10


	'!'            shift, and enter state 34
	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'new'          shift, and enter state 37
	'true'         shift, and enter state 38
	L_Ident        shift, and enter state 21
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40

	Ident          goto state 22
	Integer        goto state 23
	String         goto state 24
	Exp1           goto state 55
	Exp2           goto state 26
	Exp3           goto state 27
	Exp4           goto state 28
	Exp5           goto state 29
	Exp6           goto state 30
	Exp7           goto state 31
	Exp8           goto state 32

State 11


	'!'            shift, and enter state 34
	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'new'          shift, and enter state 37
	'true'         shift, and enter state 38
	L_Ident        shift, and enter state 21
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40

	Ident          goto state 22
	Integer        goto state 23
	String         goto state 24
	Exp2           goto state 54
	Exp3           goto state 27
	Exp4           goto state 28
	Exp5           goto state 29
	Exp6           goto state 30
	Exp7           goto state 31
	Exp8           goto state 32

State 12


	'!'            shift, and enter state 34
	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'new'          shift, and enter state 37
	'true'         shift, and enter state 38
	L_Ident        shift, and enter state 21
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40

	Ident          goto state 22
	Integer        goto state 23
	String         goto state 24
	Exp3           goto state 53
	Exp4           goto state 28
	Exp5           goto state 29
	Exp6           goto state 30
	Exp7           goto state 31
	Exp8           goto state 32

State 13


	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'new'          shift, and enter state 37
	'true'         shift, and enter state 38
	L_Ident        shift, and enter state 21
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40

	Ident          goto state 22
	Integer        goto state 23
	String         goto state 24
	Exp4           goto state 52
	Exp5           goto state 29
	Exp6           goto state 30
	Exp7           goto state 31
	Exp8           goto state 32

State 14


	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'new'          shift, and enter state 37
	'true'         shift, and enter state 38
	L_Ident        shift, and enter state 21
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40

	Ident          goto state 22
	Integer        goto state 23
	String         goto state 24
	Exp5           goto state 51
	Exp6           goto state 30
	Exp7           goto state 31
	Exp8           goto state 32

State 15


	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'new'          shift, and enter state 37
	'true'         shift, and enter state 38
	L_Ident        shift, and enter state 21
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40

	Ident          goto state 22
	Integer        goto state 23
	String         goto state 24
	Exp6           goto state 50
	Exp7           goto state 31
	Exp8           goto state 32

State 16


	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'new'          shift, and enter state 37
	'true'         shift, and enter state 38
	L_Ident        shift, and enter state 21
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40

	Ident          goto state 47
	Integer        goto state 23
	String         goto state 24
	Exp7           goto state 49
	Exp8           goto state 32

State 17


	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'true'         shift, and enter state 38
	L_Ident        shift, and enter state 21
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40

	Ident          goto state 47
	Integer        goto state 23
	String         goto state 24
	Exp8           goto state 48

State 18


	'String'       shift, and enter state 43
	'bool'         shift, and enter state 44
	'int'          shift, and enter state 45
	'void'         shift, and enter state 46
	L_Ident        shift, and enter state 21

	Ident          goto state 41
	Type           goto state 42

State 19


	'!'            shift, and enter state 34
	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'new'          shift, and enter state 37
	'true'         shift, and enter state 38
	L_Ident        shift, and enter state 21
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40

	Ident          goto state 22
	Integer        goto state 23
	String         goto state 24
	Exp1           goto state 25
	Exp2           goto state 26
	Exp3           goto state 27
	Exp4           goto state 28
	Exp5           goto state 29
	Exp6           goto state 30
	Exp7           goto state 31
	Exp8           goto state 32
	Exp            goto state 33

State 20


	L_Ident        shift, and enter state 21


State 21

	Ident -> L_Ident .                                  (rule 20)

	'&&'           reduce using rule 20
	'('            reduce using rule 20
	'()'           reduce using rule 20
	')'            reduce using rule 20
	'*'            reduce using rule 20
	'+'            reduce using rule 20
	'++'           reduce using rule 20
	','            reduce using rule 20
	'-'            reduce using rule 20
	'.'            reduce using rule 20
	'/'            reduce using rule 20
	';'            reduce using rule 20
	'='            reduce using rule 20
	'{'            reduce using rule 20
	'||'           reduce using rule 20
	L_Ident        reduce using rule 20
	%eof           reduce using rule 20


State 22

	Exp6 -> Ident . '.' Ident '(' ListExp ')'           (rule 60)
	Exp8 -> Ident .                                     (rule 65)

	'&&'           reduce using rule 65
	')'            reduce using rule 65
	'*'            reduce using rule 65
	'+'            reduce using rule 65
	'++'           reduce using rule 65
	','            reduce using rule 65
	'-'            reduce using rule 65
	'.'            shift, and enter state 98
	'/'            reduce using rule 65
	';'            reduce using rule 65
	'||'           reduce using rule 65
	%eof           reduce using rule 65


State 23

	Exp8 -> Integer .                                   (rule 64)

	'&&'           reduce using rule 64
	')'            reduce using rule 64
	'*'            reduce using rule 64
	'+'            reduce using rule 64
	'++'           reduce using rule 64
	','            reduce using rule 64
	'-'            reduce using rule 64
	'/'            reduce using rule 64
	';'            reduce using rule 64
	'||'           reduce using rule 64
	%eof           reduce using rule 64


State 24

	Exp8 -> String .                                    (rule 66)

	'&&'           reduce using rule 66
	')'            reduce using rule 66
	'*'            reduce using rule 66
	'+'            reduce using rule 66
	'++'           reduce using rule 66
	','            reduce using rule 66
	'-'            reduce using rule 66
	'/'            reduce using rule 66
	';'            reduce using rule 66
	'||'           reduce using rule 66
	%eof           reduce using rule 66


State 25

	Exp1 -> Exp1 . '||' Exp2                            (rule 47)
	Exp -> Exp1 .                                       (rule 75)

	')'            reduce using rule 75
	','            reduce using rule 75
	';'            reduce using rule 75
	'||'           shift, and enter state 100
	%eof           reduce using rule 75


State 26

	Exp1 -> Exp2 .                                      (rule 48)
	Exp2 -> Exp2 . '&&' Exp3                            (rule 49)

	'&&'           shift, and enter state 101
	')'            reduce using rule 48
	','            reduce using rule 48
	';'            reduce using rule 48
	'||'           reduce using rule 48
	%eof           reduce using rule 48


State 27

	Exp2 -> Exp3 .                                      (rule 50)

	'&&'           reduce using rule 50
	')'            reduce using rule 50
	','            reduce using rule 50
	';'            reduce using rule 50
	'||'           reduce using rule 50
	%eof           reduce using rule 50


State 28

	Exp3 -> Exp4 .                                      (rule 52)
	Exp4 -> Exp4 . '++' Exp5                            (rule 53)
	Exp4 -> Exp4 . '+' Exp5                             (rule 54)
	Exp4 -> Exp4 . '-' Exp5                             (rule 55)

	'&&'           reduce using rule 52
	')'            reduce using rule 52
	'+'            shift, and enter state 102
	'++'           shift, and enter state 103
	','            reduce using rule 52
	'-'            shift, and enter state 104
	';'            reduce using rule 52
	'||'           reduce using rule 52
	%eof           reduce using rule 52


State 29

	Exp4 -> Exp5 .                                      (rule 56)
	Exp5 -> Exp5 . '*' Exp6                             (rule 57)
	Exp5 -> Exp5 . '/' Exp6                             (rule 58)

	'&&'           reduce using rule 56
	')'            reduce using rule 56
	'*'            shift, and enter state 105
	'+'            reduce using rule 56
	'++'           reduce using rule 56
	','            reduce using rule 56
	'-'            reduce using rule 56
	'/'            shift, and enter state 106
	';'            reduce using rule 56
	'||'           reduce using rule 56
	%eof           reduce using rule 56


State 30

	Exp5 -> Exp6 .                                      (rule 59)

	'&&'           reduce using rule 59
	')'            reduce using rule 59
	'*'            reduce using rule 59
	'+'            reduce using rule 59
	'++'           reduce using rule 59
	','            reduce using rule 59
	'-'            reduce using rule 59
	'/'            reduce using rule 59
	';'            reduce using rule 59
	'||'           reduce using rule 59
	%eof           reduce using rule 59


State 31

	Exp6 -> Exp7 .                                      (rule 61)

	'&&'           reduce using rule 61
	')'            reduce using rule 61
	'*'            reduce using rule 61
	'+'            reduce using rule 61
	'++'           reduce using rule 61
	','            reduce using rule 61
	'-'            reduce using rule 61
	'/'            reduce using rule 61
	';'            reduce using rule 61
	'||'           reduce using rule 61
	%eof           reduce using rule 61


State 32

	Exp7 -> Exp8 .                                      (rule 63)

	'&&'           reduce using rule 63
	')'            reduce using rule 63
	'*'            reduce using rule 63
	'+'            reduce using rule 63
	'++'           reduce using rule 63
	','            reduce using rule 63
	'-'            reduce using rule 63
	'/'            reduce using rule 63
	';'            reduce using rule 63
	'||'           reduce using rule 63
	%eof           reduce using rule 63


State 33

	%start_pExp -> Exp .                                (rule 19)

	%eof           accept


State 34

	Exp3 -> '!' . Exp3                                  (rule 51)

	'!'            shift, and enter state 34
	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'new'          shift, and enter state 37
	'true'         shift, and enter state 38
	L_Ident        shift, and enter state 21
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40

	Ident          goto state 22
	Integer        goto state 23
	String         goto state 24
	Exp3           goto state 109
	Exp4           goto state 28
	Exp5           goto state 29
	Exp6           goto state 30
	Exp7           goto state 31
	Exp8           goto state 32

State 35

	Exp8 -> '(' . Exp ')'                               (rule 69)

	'!'            shift, and enter state 34
	'('            shift, and enter state 35
	'false'        shift, and enter state 36
	'new'          shift, and enter state 37
	'true'         shift, and enter state 38
	L_Ident        shift, and enter state 21
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40

	Ident          goto state 22
	Integer        goto state 23
	String         goto state 24
	Exp1           goto state 25
	Exp2           goto state 26
	Exp3           goto state 27
	Exp4           goto state 28
	Exp5           goto state 29
	Exp6           goto state 30
	Exp7           goto state 31
	Exp8           goto state 32
	Exp            goto state 108

State 36

	Exp8 -> 'false' .                                   (rule 68)

	'&&'           reduce using rule 68
	')'            reduce using rule 68
	'*'            reduce using rule 68
	'+'            reduce using rule 68
	'++'           reduce using rule 68
	','            reduce using rule 68
	'-'            reduce using rule 68
	'/'            reduce using rule 68
	';'            reduce using rule 68
	'||'           reduce using rule 68
	%eof           reduce using rule 68


State 37

	Exp7 -> 'new' . Ident '()'                          (rule 62)

	L_Ident        shift, and enter state 21

	Ident          goto state 107

State 38

	Exp8 -> 'true' .                                    (rule 67)

	'&&'           reduce using rule 67
	')'            reduce using rule 67
	'*'            reduce using rule 67
	'+'            reduce using rule 67
	'++'           reduce using rule 67
	','            reduce using rule 67
	'-'            reduce using rule 67
	'/'            reduce using rule 67
	';'            reduce using rule 67
	'||'           reduce using rule 67
	%eof           reduce using rule 67


State 39

	Integer -> L_integ .                                (rule 21)

	'&&'           reduce using rule 21
	')'            reduce using rule 21
	'*'            reduce using rule 21
	'+'            reduce using rule 21
	'++'           reduce using rule 21
	','            reduce using rule 21
	'-'            reduce using rule 21
	'/'            reduce using rule 21
	';'            reduce using rule 21
	'||'           reduce using rule 21
	%eof           reduce using rule 21


State 40

	String -> L_quoted .                                (rule 22)

	'&&'           reduce using rule 22
	')'            reduce using rule 22
	'*'            reduce using rule 22
	'+'            reduce using rule 22
	'++'           reduce using rule 22
	','            reduce using rule 22
	'-'            reduce using rule 22
	'/'            reduce using rule 22
	';'            reduce using rule 22
	'||'           reduce using rule 22
	%eof           reduce using rule 22


State 41

	Type -> Ident .                                     (rule 74)

	L_Ident        reduce using rule 74
	%eof           reduce using rule 74


State 42

	%start_pType -> Type .                              (rule 18)

	%eof           accept


State 43

	Type -> 'String' .                                  (rule 73)

	L_Ident        reduce using rule 73
	%eof           reduce using rule 73


State 44

	Type -> 'bool' .                                    (rule 70)

	L_Ident        reduce using rule 70
	%eof           reduce using rule 70


State 45

	Type -> 'int' .                                     (rule 71)

	L_Ident        reduce using rule 71
	%eof           reduce using rule 71


State 46

	Type -> 'void' .                                    (rule 72)

	L_Ident        reduce using rule 72
	%eof           reduce using rule 72


State 47

	Exp8 -> Ident .                                     (rule 65)

	%eof           reduce using rule 65


State 48

	%start_pExp8 -> Exp8 .                              (rule 17)

	%eof           accept


State 49

	%start_pExp7 -> Exp7 .                              (rule 16)

	%eof           accept


State 50

	%start_pExp6 -> Exp6 .                              (rule 15)

	%eof           accept


State 51

	%start_pExp5 -> Exp5 .                              (rule 14)
	Exp5 -> Exp5 . '*' Exp6                             (rule 57)
	Exp5 -> Exp5 . '/' Exp6                             (rule 58)

	'*'            shift, and enter state 105
	'/'            shift, and enter state 106
	%eof           accept


State 52

	%start_pExp4 -> Exp4 .                              (rule 13)
	Exp4 -> Exp4 . '++' Exp5                            (rule 53)
	Exp4 -> Exp4 . '+' Exp5                             (rule 54)
	Exp4 -> Exp4 . '-' Exp5                             (rule 55)

	'+'            shift, and enter state 102
	'++'           shift, and enter state 103
	'-'            shift, and enter state 104
	%eof           accept


State 53

	%start_pExp3 -> Exp3 .                              (rule 12)

	%eof           accept


State 54

	%start_pExp2 -> Exp2 .                              (rule 11)
	Exp2 -> Exp2 . '&&' Exp3                            (rule 49)

	'&&'           shift, and enter state 101
	%eof           accept


State 55

	%start_pExp1 -> Exp1 .                              (rule 10)
	Exp1 -> Exp1 . '||' Exp2                            (rule 47)

	'||'           shift, and enter state 100
	%eof           accept


State 56

	Stm -> Ident . '=' Exp ';'                          (rule 42)
	Exp6 -> Ident . '.' Ident '(' ListExp ')'           (rule 60)
	Exp8 -> Ident .                                     (rule 65)
	Type -> Ident .                                     (rule 74)

	'&&'           reduce using rule 65
	'*'            reduce using rule 65
